New method trial